# Raphael

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: full.yml  helm-lint.yml  quick.yml
agents/: agent_server.py  api.py  auditor_agent.py  base.py  coder.py  deployment_agent.py  evaluator_agent.py  experiment_agent.py  exploration_engine.py  graph_optimizer.py  graph_optimizer_agent.py  neo4j_steward.py  optimization_agent.py  performance_analyzer.py  planner_agent.py  portfolio_agent.py  qdrant_steward.py  relational_steward.py  remote.py  research.py  researcher.py  router.py  stewardship_base.py  system.py  system_monitor_agent.py  universal.py  validator_agent.py  voice_orchestrator.py  voice_utils.py
agents/caretaker/: auditor.py  controller.py  evolution.py  sage.py
agents/coder/: __init__.py
agents/evaluator/: __init__.py  evaluator_agent.py
agents/planner/: __init__.py  planner_agent.py
agents/researcher/: __init__.py  research_agent.py
ai_router/: README.md  adaptive_learning.py  adaptive_policy_engine.py  advanced_scheduler.py  agent.py  ai_router.md  alerting.py  audit_log.py  auto_scaler.py  autonomy_engine.py  bus.py  capabilities.py  circuit_breaker.py  cluster_manager.py  code_embedding_server.py  config.json  constraints.py  context.py  database.py  dependency_graph.py  desktop_hardware_capabilities.json  embedding_client.py  embedding_server.py  embeddings.py  evaluation.py  example_client.py  experiment.py  federation_manager.py  federation_router.py  graph_optimizer.py  interaction.py  knowledge.py  lifecycle.py  lmstudio_adapter.py  load_manager.py  main.py  memory.py  memory_graph.py  mock_infrastructure.py  model_mapping.py  (+34 more)
config/: agents.yaml
core/: main.py
core/civilization/: controller.py  council.py  infrastructure.py  innovation.py  knowledge.py  router.py  society.py
core/cognitive/: aggregator.py  context.py  curiosity_throttle.py  executive.py  experiment_assignment.py  experiments.py  hypotheses.py  knowledge_gaps.py  missions.py  planner.py  questions.py  router.py  scheduler.py  validator.py
core/discovery/: __init__.py  approval.py  capability_registry.py  capability_tracking.py  discovery_scheduler.py  evaluation.py  innovation_scoring.py  integration.py  opportunities.py  proposals.py  prototype_designer.py  role_expansion.py  safety_controls.py  sandbox.py
core/environment/: constraints.py  filesystem.py  monitor.py  network.py  router.py
core/evaluation/: critic.py  qa.py  router.py  sandbox.py
core/execution/: automation.py  browser_tool.py  code_runner.py  router.py  system_control.py  tool_registry.py  tools.py
core/knowledge_quality/: __init__.py  agent_reputation.py  drift_monitor.py  (+18 more)
data/: capabilities.json  linkedto_dedupe_checkpoint.json  linkedto_dedupe_last_run.json  linkedto_prune_checkpoint.json  linkedto_prune_last_run.json  schemas.py  skills.yaml
director/: __init__.py  cluster_router.py  director.py  graph_reasoner.py  habitat_evolver.py  habitat_metrics.py  habitat_monitor.py  habitat_selector.py  hardware_scheduler.py  helm_controller.py  llm_client.py  models.py  pattern_discovery.py  task_manager.py
docs/: ARCHITECTURE_DIAGRAM_VERIFICATION.md  IMPLEMENTATION_CHECKLIST.md  RAPHAEL_USER_GUIDE.md  architecture.md  architecture_diagrams.md  caretaker_report.md  desktop_hardware_capabilities.json  experiments.md  graph_schema.md  habitat_design.md  knowledge_quality_schema.md  observability.md  roadmap.md  swarm_director.md  workflows.md
event_bus/: event_bus.py  mac_hardware_requirements.json  redis_bus.py
experiments/: base_experiment.py  scheduler.py
graph/: graph_api.py
infrastructure/: env.sh  kubeconfig.yaml
observability/: metrics_endpoint.py  prometheus.yml  telemetry.py
scripts/: agent_factory_builder.py  agent_recycling_swarm.py  bootstrap_system.py  build_capabilities_map.py  fix_imports.py  hybridize_research_graph.py  import_swarm_csvs.py  link_concepts.py  link_registries.py  memory_system.py  migrate_legacy_kg.py  rebuild_kg.py  repo_discovery_agent.py  retired_agent_lab.py  seed_swarm_graph.py  stitch_social_graph.py  sync_ollama_models.py  task_generator.py  test.sh  tmp_check_kg.py  wipe_and_populate_kg.py
spine/: health.py  identity.py  resources.py  router.py  safety.py
swarm/: dynamics.py  model_router.py  orchestrator.py  router.py  scheduler.py  swarm_manager.py
swarm-dashboard/: AGENT_STYLE.md  HYBRID_RESEARCH_GRAPH.md  MEMORY_SYSTEM.md  UI_AGENT_PROFILE.md  UI_PLANNER_AGENT_PROFILE.md  UI_REVIEWER_AGENT_PROFILE.md  eslint.config.mjs  package-lock.json  package.json
tests/: conftest.py  test_agent.py  test_agents.py  test_civilization.py  test_cognitive.py  test_connectivity.py  test_core_schemas.py  test_environment.py  test_evaluation.py  test_event_bus.py  test_execution.py  test_identity_edge_cases.py  test_intake_gate.py  test_learning.py  test_node_manager.py  test_node_registry.py  test_perception.py  test_research.py  test_router.py  test_scs.py  test_spine.py  test_strategy.py  test_swarm.py  test_swarm_dynamics.py  test_swarm_execution.py  test_system_monitor_agent.py  test_understanding.py  test_voice_orchestrator_security.py
tool_router/: tools.py
(+272 files in other folders)
